test/Fail/Issue3056.err
Issue3056.agda:18.10-15: error: [SplitOnIrrelevant]
Cannot pattern match against irrelevant argument of type
Σ Bool type
when checking that the pattern x , y has type Σ Bool type
